# fantasy_football_v2

./: pyproject.toml
examples/: weekly_points_df.py
examples/analysis/: points_by_ref_analysis.ipynb  weekly_passing_analysis.ipynb  weekly_rushing_analysis.ipynb
examples/games/: game_df.py
examples/ref/: ref_data_model.py  ref_dataframe.py
src/fantasy_football_v2/data/data_model/: game.py  official.py  ref.py  weekly_points.py
src/fantasy_football_v2/data/generate_data_models/: generate_ref_model.py
src/fantasy_football_v2/data/generate_dataframes/: generate_game_df.py  generate_passer_df.py  generate_ref_df.py  generate_rusher_df.py  generate_weekly_points_df.py  ref_df.py
src/fantasy_football_v2/utilities/: get_stats.py  time_functions.py
