[project]
name = "fantasy_football_v2"
version = "1.0.0.1"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab~=4.4.9",
    "matplotlib~=3.10.6",
    "nfl_data_py~=0.3.3",
    "plotly~=6.3.1",
    "pandas~=1.5.3",
    "pydantic~=2.11.9",
    "pydantic-settings~=2.11.0",
    "seaborn~=0.13.2"
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "-v --cov=src/fantasy_football_v2 --cov-report=html"